# flywheel_connectors

./: .gitignore  AGENTS.md  Cargo.toml  FCP_CDDL_V2.cddl  FCP_Specification_V1.md  FCP_Specification_V2.md  README.md  UPGRADE_LOG.md  deny.toml
.apr/: config.yaml
connectors/discord/: Cargo.toml
connectors/discord/src/: api.rs  config.rs  connector.rs  error.rs  gateway.rs  lib.rs  main.rs  types.rs
connectors/openai/: Cargo.toml
connectors/openai/src/: client.rs  connector.rs  error.rs  main.rs  types.rs
connectors/telegram/: Cargo.toml
connectors/telegram/src/: client.rs  connector.rs  main.rs  types.rs
connectors/twitter/: Cargo.toml
connectors/twitter/src/: client.rs  config.rs  connector.rs  error.rs  lib.rs  main.rs  oauth.rs  stream.rs  types.rs
crates/fcp-bootstrap/: Cargo.toml
crates/fcp-bootstrap/examples/: generate_golden_vectors.rs
crates/fcp-bootstrap/src/: ceremony.rs  cold_recovery.rs  error.rs  genesis.rs  hardware_token.rs  lib.rs  phase.rs  recovery_phrase.rs  time_validation.rs  workflow.rs
crates/fcp-bootstrap/tests/: bootstrap_integration.rs  golden_vectors.rs
crates/fcp-cbor/: Cargo.toml
crates/fcp-cbor/src/: lib.rs
crates/fcp-cli/: Cargo.toml
crates/fcp-cli/src/: main.rs
crates/fcp-cli/tests/: audit_e2e_test.rs  audit_verify_test.rs  bench_test.rs  connector_introspect_test.rs  doctor_test.rs  new_test.rs  package_metadata_test.rs  package_reproducible_e2e_test.rs  policy_e2e_test.rs
crates/fcp-conformance/: Cargo.toml
crates/fcp-conformance/src/: compliance.rs  harness.rs  lib.rs
crates/fcp-conformance/tests/: fzpf_schema_validation.rs
crates/fcp-core/: Cargo.toml
crates/fcp-core/src/: audit.rs  capability.rs  checkpoint.rs  connector.rs  connector_state.rs  crdt.rs  credential.rs  enrollment.rs  error.rs  event.rs  health.rs  lease.rs  lib.rs  lifecycle.rs  object.rs  operation.rs  policy.rs  posture.rs  protocol.rs  provenance.rs  quorum.rs  ratelimit.rs  revocation.rs  secret.rs  util.rs  zone_keys.rs
crates/fcp-core/tests/: audit_chain_golden_vectors.rs  capability_golden_vectors.rs  checkpoint_golden_vectors.rs  connector_state_golden_vectors.rs  crdt_merge.rs  credential_golden_vectors.rs  enrollment_golden_vectors.rs  enrollment_posture_e2e.rs  exactly_once_golden_vectors.rs  fork_detection_tests.rs  fork_resolution_e2e.rs  invoke_golden_vectors.rs  lifecycle_canary_e2e.rs  lifecycle_tests.rs  operation_golden_vectors.rs  policy_golden_vectors.rs  posture_tests.rs  provenance_golden_vectors.rs  quorum_golden_vectors.rs  revocation_golden_vectors.rs  simulate_golden_vectors.rs
crates/fcp-crypto/: Cargo.toml
crates/fcp-crypto/src/: aead.rs  canonicalize.rs  cose.rs  ed25519.rs  error.rs  hkdf.rs  hpke_seal.rs  kid.rs  lib.rs  mac.rs  shamir.rs  x25519.rs
crates/fcp-crypto/tests/: shamir_property_tests.rs
crates/fcp-e2e/: Cargo.toml
crates/fcp-e2e/src/: lib.rs  logging.rs  subprocess.rs
crates/fcp-graphql/: Cargo.toml
crates/fcp-graphql/src/: client.rs  error.rs  lib.rs  operation.rs  pagination.rs  retry.rs  schema.rs  subscription.rs
crates/fcp-graphql/tests/: client.rs
crates/fcp-host/: Cargo.toml
crates/fcp-host/src/: discovery.rs  error.rs  lib.rs
crates/fcp-host/tests/: agent_integration.rs  host_connector_integration.rs  rate_limit_integration.rs
crates/fcp-manifest/: Cargo.toml
crates/fcp-manifest/src/: lib.rs
crates/fcp-manifest/tests/: manifest_golden_vectors.rs
crates/fcp-mesh/: Cargo.toml
crates/fcp-mesh/src/: admission.rs  degraded.rs  device.rs  gossip.rs  lib.rs  node.rs  planner.rs  session.rs  symbol_request.rs
crates/fcp-mesh/tests/: mesh_integration.rs
crates/fcp-oauth/: Cargo.toml
crates/fcp-oauth/src/: error.rs  lib.rs  oauth1.rs  oauth2.rs  pkce.rs  provider.rs  token.rs
crates/fcp-protocol/: Cargo.toml
crates/fcp-protocol/benches/: fcpc_parsing.rs  fcps_parsing.rs
crates/fcp-protocol/src/: control_plane.rs  fcpc.rs  fcps.rs  lib.rs  session.rs  symbol_envelope.rs
crates/fcp-protocol/tests/: fcpc_control_plane_integration.rs  fcpc_golden_vectors.rs  fcps_golden_vectors.rs  session_golden_vectors.rs
crates/fcp-raptorq/: Cargo.toml
crates/fcp-raptorq/src/: chunk.rs  config.rs  decode.rs  encode.rs  envelope.rs  error.rs  golden.rs  lib.rs
crates/fcp-ratelimit/: Cargo.toml
crates/fcp-ratelimit/src/: backoff.rs  fcp.rs  headers.rs  leaky_bucket.rs  lib.rs  sliding_window.rs  token_bucket.rs
crates/fcp-ratelimit/tests/: rate_limit_golden_vectors.rs  rate_limit_unit_tests.rs  token_bucket_drift.rs
crates/fcp-registry/: Cargo.toml
crates/fcp-registry/src/: lib.rs
crates/fcp-sandbox/: Cargo.toml
crates/fcp-sandbox/src/: egress.rs  lib.rs  linux.rs  macos.rs  sandbox.rs  wasi.rs  windows.rs
crates/fcp-sandbox/tests/: allow_deny_matrix.rs  canary_connector.rs  credential_injection_integration.rs
crates/fcp-store/: Cargo.toml
crates/fcp-store/benches/: symbol_store.rs
crates/fcp-store/src/: coverage.rs  error.rs  gc.rs  lib.rs  object_store.rs  offline.rs  quarantine.rs  repair.rs  symbol_store.rs
crates/fcp-store/tests/: store_repair_integration.rs
crates/fcp-streaming/: Cargo.toml
crates/fcp-streaming/src/: error.rs  lib.rs  reconnect.rs  sse.rs  stream.rs  websocket.rs
crates/fcp-tailscale/: Cargo.toml
crates/fcp-tailscale/src/: client.rs  error.rs  identity.rs  lib.rs  tag.rs
crates/fcp-tailscale/tests/: enrollment_lifecycle.rs
crates/fcp-telemetry/: Cargo.toml
crates/fcp-telemetry/src/: context.rs  export.rs  lib.rs  logging.rs  metrics.rs  tracing_layer.rs
crates/fcp-testkit/: Cargo.toml
crates/fcp-testkit/src/: assertions.rs  fixtures.rs  harness.rs  lib.rs  log_scan.rs  mock_server.rs  supervisor_examples.rs  tracing_config.rs
crates/fcp-testkit/tests/: policy_simulation.rs
crates/fcp-webhook/: Cargo.toml
crates/fcp-webhook/src/: error.rs  event.rs  handler.rs  lib.rs  provider.rs  signature.rs
fuzz/: Cargo.toml
fuzz/corpus/capability/: minimal_cose.cbor
fuzz/fuzz_targets/: capability.rs  fcpc_frame.rs  fcps_datagram.rs  fcps_frame.rs  session.rs  session_transcript.rs  zone_key_manifest.rs
(+215 files in other folders)
