[workspace]
resolver = "2"
members = [
    "crates/fcp-core",
    "crates/fcp-ratelimit",
    "crates/fcp-telemetry",
    "crates/fcp-testkit",
    "connectors/telegram",
    "connectors/discord",
    "connectors/anthropic",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/flywheel/flywheel_connectors"
authors = ["Flywheel Core Team <core@flywheel.dev>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Bytes
bytes = "1.9"
hex = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }

# Streams
tokio-stream = "0.1"

# Testing
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
