[package]
name = "fcp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

fcp-protocol = { path = "../crates/fcp-protocol" }
fcp-crypto = { path = "../crates/fcp-crypto" }

[[bin]]
name = "fuzz_capability"
path = "fuzz_targets/capability.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_session"
path = "fuzz_targets/session.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fcps_frame"
path = "fuzz_targets/fcps_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fcps_datagram"
path = "fuzz_targets/fcps_datagram.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fcpc_frame"
path = "fuzz_targets/fcpc_frame.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
