[package]
name = "fcp-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ciborium = "0.2.2"

fcp-core = { path = "../crates/fcp-core" }
fcp-crypto = { path = "../crates/fcp-crypto" }
fcp-protocol = { path = "../crates/fcp-protocol" }

[[bin]]
name = "fuzz_capability"
path = "fuzz_targets/capability.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_session"
path = "fuzz_targets/session.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fcps_frame"
path = "fuzz_targets/fcps_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fcps_datagram"
path = "fuzz_targets/fcps_datagram.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fcpc_frame"
path = "fuzz_targets/fcpc_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_session_transcript"
path = "fuzz_targets/session_transcript.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_zone_key_manifest"
path = "fuzz_targets/zone_key_manifest.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
