[package]
name = "fcp-openai"
description = "OpenAI API connector for the Flywheel Connector Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "fcp-openai"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
fcp-core = { path = "../../crates/fcp-core" }

anyhow.workspace = true
async-stream = "0.3"
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
