[package]
name = "fcp-twitter"
description = "X/Twitter API connector for the Flywheel Connector Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "fcp-twitter"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
fcp-core = { path = "../../crates/fcp-core" }

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
hmac = "0.12"
percent-encoding.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
