[package]
name = "fcp-bootstrap"
description = "FCP2 bootstrap and genesis: first-run workflow, owner key ceremony, enrollment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
fcp-crypto.workspace = true
fcp-core.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full", "time", "net"] }
async-trait.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ciborium.workspace = true

# Cryptography (for threshold signing and key derivation)
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
blake3.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize = { workspace = true, features = ["derive"] }
rand.workspace = true
rand_core.workspace = true
subtle.workspace = true

# BIP39 mnemonics for recovery phrases
bip39 = "2.1"

# Time handling
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Logging/tracing
tracing.workspace = true

# Bytes
bytes.workspace = true
hex.workspace = true
base64.workspace = true

[target.'cfg(unix)'.dependencies]
# NTP client for time validation (Unix systems)
rsntp = "4.1"

[target.'cfg(windows)'.dependencies]
# Windows time APIs
windows = { version = "0.61", features = ["Win32_System_Time"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
pretty_assertions.workspace = true
rand_chacha = "0.3"
tempfile = "3.15"
