[package]
name = "fcp-cbor"
description = "FCP2 canonical serialization (deterministic CBOR + schema hashing)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
ciborium.workspace = true
hex.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
