[package]
name = "fcp-cli"
description = "FCP2 developer/operator CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "fcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
hex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
textwrap = "0.16"
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

# Core FCP crates
fcp-cbor = { path = "../fcp-cbor" }
fcp-core = { path = "../fcp-core" }
fcp-crypto = { path = "../fcp-crypto" }
fcp-raptorq = { path = "../fcp-raptorq" }
fcp-manifest = { path = "../fcp-manifest" }
fcp-registry = { path = "../fcp-registry" }
fcp-store = { path = "../fcp-store" }
ed25519-dalek.workspace = true
