[package]
name = "fcp-cli"
description = "FCP2 developer/operator CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "fcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Benchmarking dependencies
fcp-cbor = { path = "../fcp-cbor" }
fcp-core = { path = "../fcp-core" }
fcp-crypto = { path = "../fcp-crypto" }
fcp-raptorq = { path = "../fcp-raptorq" }
ed25519-dalek.workspace = true
