[package]
name = "fcp-conformance"
description = "FCP2 conformance tooling (vectors, interop helpers, harness glue)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
