[package]
name = "fcp-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fcp-core = { workspace = true }
fcp-conformance = { workspace = true }
fcp-testkit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true }
