[package]
name = "fcp-graphql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Typed GraphQL client infrastructure for FCP connectors"

[dependencies]
fcp-core = { workspace = true }
fcp-streaming = { workspace = true }
futures-util = { workspace = true }
jsonschema = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
fcp-testkit = { workspace = true }
pretty_assertions = { workspace = true }
tokio-tungstenite = { workspace = true }
wiremock = { workspace = true }
