[package]
name = "fcp-manifest"
description = "FCP2 connector manifest parsing and validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
base64 = "0.22"
fcp-cbor = { path = "../fcp-cbor" }
fcp-core = { path = "../fcp-core" }
hex.workspace = true
ipnet = "2.9"
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
thiserror.workspace = true
