[package]
name = "fcp-mesh"
description = "FCP2 mesh node orchestration (routing, admission, gossip, leases)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
