[package]
name = "fcp-oauth"
description = "Unified OAuth library for FCP connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fcp-core = { path = "../fcp-core" }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
async-trait.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time handling
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Crypto for OAuth
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand.workspace = true
url = "2.5"
serde_urlencoded = "0.7"

# Concurrent data structures
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
