[package]
name = "fcp-protocol"
description = "FCP2 protocol framing and session primitives (FCPS/FCPC)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true
