[package]
name = "fcp-protocol"
description = "FCP2 protocol framing and session primitives (FCPS/FCPC)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
bytes.workspace = true
thiserror.workspace = true
serde.workspace = true
ciborium.workspace = true
blake3.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
subtle.workspace = true

fcp-core.workspace = true
fcp-crypto.workspace = true
fcp-cbor.workspace = true
fcp-tailscale.workspace = true

[dev-dependencies]
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
semver.workspace = true
