[package]
name = "fcp-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
fcp-cbor = { workspace = true }
fcp-core = { workspace = true }
fcp-crypto = { workspace = true }
fcp-manifest = { workspace = true }
fcp-store = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true }
