[package]
name = "fcp-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enable live supply-chain verification using tough/sigstore crates
supply-chain-live = []

[dependencies]
fcp-cbor = { workspace = true }
fcp-core = { workspace = true }
fcp-crypto = { workspace = true }
fcp-manifest = { workspace = true }
fcp-store = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
# Supply-chain hardening (optional for live verification)
tough = { workspace = true, optional = true }
sigstore = { workspace = true, optional = true }
sigstore-trust-root = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true }
