[package]
name = "fcp-sandbox"
description = "FCP2 sandbox enforcement (OS sandbox profiles + egress guard)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fcp-core.workspace = true
fcp-manifest.workspace = true
idna = "1.0"
ipnet = "2.9"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
