[package]
name = "fcp-sandbox"
description = "FCP2 sandbox enforcement (OS sandbox profiles + egress guard)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Override workspace lints - sandbox enforcement requires unsafe syscalls
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
fcp-core.workspace = true
fcp-manifest.workspace = true
idna = "1.0"
ipnet = "2.9"
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
rand.workspace = true

# WASI runtime
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
