[package]
name = "fcp-streaming"
version = "0.1.0"
edition = "2021"
description = "Unified streaming library for FCP connectors"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/fcp"

[dependencies]
fcp-core = { path = "../fcp-core" }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-stream.workspace = true
async-trait.workspace = true
futures-util.workspace = true

# HTTP client for SSE
reqwest = { workspace = true, features = ["stream"] }

# WebSocket
tokio-tungstenite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
bytes.workspace = true
pin-project-lite = "0.2"
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
