[package]
name = "fcp-telemetry"
description = "Unified metrics, logging, and tracing for FCP connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fcp-core = { path = "../fcp-core" }

# Tracing
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Identifiers
uuid.workspace = true

# Utilities
once_cell = "1.21"
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
